Dotclear 2.3.0 - 2011-05-16
===========================================================
* Admin: Major backend redesign
* Admin: Customizable Dashboard
* Admin: New Favourites admin submenu
* Admin: New user preferences backend
* Admin: Accessibility enhancements
* Admin: Inline help extended
* Templates: Default theme templates moved to inc/public/default-templates
* Clearbricks: External libraries relocated to inc/libs
* Clearbricks: fixed utf-8 and mysql strict mode problems
* Added a safe mode connection, disabling all plugins
* Mysqli support (config.php may need to be updated manually)
* Fixed dcLog bug with pgsql
* Fixed comment/trackbacks counters reset.
* Several other bug fixes


Dotclear 2.2.3 - 2011-04-01
===========================================================
* Security fix in media manager. Thx to Raphaël
* Bugfix : 2.2.2 was preventing manual thumbnail regeneration.
* Database handling bugfixes

Dotclear 2.2.2 - 2011-01-17
===========================================================
* Bugfix: 2.2.1 was blocking new installations
* Autoupdate procedure should now be "bad ftp client configuration"-proof.
* Several other small bugfixes

Dotclear 2.2.1 - 2011-01-15
===========================================================
* ExternalMedia is not part of the core distribution anymore
* New attribute to tpl:SysIf: blog_id
* New behaviour: adminMediaItemForm
* Several bugfixes
* Several code optimizations
* Several typos corrected
* Security fix in Clearbricks. Thx to François Pierre-Doray for pointing it out.

Dotclear 2.2 - 2010-07-01
===========================================================
* New installation wizard.
* Several new behaviours:
	- adminCommentHeaders
	- adminCommentsActionsCombo
	- adminCommentsActions
	- adminCommentsActionsContent
	- adminBeforeCommentDelete
	- adminPostsActionsHeaders
	- adminUsersActionsCombo
	- coreBeforeCategoryCreate & coreAfterCategoryCreate
	- coreBeforeCategoryUpdate & coreAfterCategoryUpdate