@@ -1,3 +1,7 @@
+Dotclear 2.4.0 - ongoing dev
+===========================================================
+* handling of postgres non default schemas (db_prefix = 'schema.prefix')
+
 Dotclear 2.3.0 - 2011-05-16
 ===========================================================
 * Admin: Major backend redesign
